--- a/movie-api/package.json
+++ b/movie-api/package.json
@@ -11,11 +11,13 @@
   "author": "Rahul",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15"
   }
 }
