--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "material-ui-search-bar": "^1.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-qr-code": "^2.0.7",
     "react-redux": "^8.0.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
