--- a/movie-api/package.json
+++ b/movie-api/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.1",
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15"
